Bug 546473 - [test] Create a new test bundle that can be coded with latest language version
Creating a new test bundle with latest BREE (13) and moving the newly
added TextBlockTest to it.

Change-Id: I5dd1a79d0deda98cb0ffb0076bc24c329e7588f9
Signed-off-by: Jay Arthanareeswaran <jarthana@in.ibm.com>